Syled toolbar and fixed aligned tool bar with the cards in weekly analytics

--- a/src/components/Analytics/TotalPerWeek/TotalPerWeekDashboard/total-per-week-dashboard.scss
+++ b/src/components/Analytics/TotalPerWeek/TotalPerWeekDashboard/total-per-week-dashboard.scss
@@ -4,5 +4,5 @@
   flex-wrap: wrap;
   height: 100%;
   width: 100%;
-  padding: 40px;
+  padding: 40px 0 40px 0;
 }
