--- a/src/components/BasicComponents/ToolBar/tool-bar.scss
+++ b/src/components/BasicComponents/ToolBar/tool-bar.scss
@@ -6,6 +6,10 @@
   justify-content: flex-start;
   align-items: flex-end;
 
+  background-color: $dark-primary;
+
+  border-radius: $sizing-3;
+  padding: 20px;
   width: 100%;
   margin-top: 15px;
 }
